// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comps/Tab/item active 1`] = `
<div>
  <div
    class="xrk-tab-item __x-st-exp __x-st-click xrk-tab-item-active"
    data-testid="tab-item"
  >
    <div
      class=""
    >
      item
    </div>
  </div>
</div>
`;

exports[`comps/Tab/item icon 1`] = `
<div>
  <div
    class="xrk-tab-item __x-st-exp __x-st-click"
    data-testid="tab-item"
  >
    <div
      class=""
    >
      <div
        class="taro-img xrk-img xrk-tab-item-icon"
      >
        <img
          class="taro-img__mode-scaletofill"
          src="https://t7.baidu.com/it/u=1951548898,3927145&fm=193&f=GIF"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`comps/Tab/item message 1`] = `
<div>
  <div
    class="xrk-tab-item __x-st-exp __x-st-click"
    data-testid="tab-item"
  >
    <div
      class="xrk-tab-item-message"
    >
      item
    </div>
  </div>
</div>
`;

exports[`comps/Tab/item title 1`] = `
<div>
  <div
    class="xrk-tab-item __x-st-exp __x-st-click"
    data-testid="tab-item"
  >
    <div
      class=""
    >
      item
    </div>
  </div>
</div>
`;
